[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/ui/highlight_28.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/ui/frame_28.png" type="Texture" id=2]
[ext_resource path="res://scenes/powerups/parent/Powerup.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/ui/highlight_border_32.png" type="Texture" id=4]
[ext_resource path="res://assets/shaders/highlight_bounce.tres" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/rate = 3.0
shader_param/amount = 3.0

[node name="Powerup" type="TextureRect"]
anchor_left = 0.474
anchor_top = 0.454
anchor_right = 0.526
anchor_bottom = 0.546
margin_left = -0.0800781
margin_top = -0.320038
margin_right = 0.0799561
margin_bottom = 0.320007
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
script = ExtResource( 3 )

[node name="Icon" type="TextureRect" parent="."]
anchor_left = 0.22
anchor_top = 0.22
anchor_right = 0.78
anchor_bottom = 0.78
expand = true
stretch_mode = 6

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Highlight" type="TextureRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -4.0
margin_right = 3.99994
margin_bottom = 3.99997
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[connection signal="gui_input" from="." to="." method="_on_Powerup_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Powerup_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Powerup_mouse_exited"]
